<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/background"
    android:paddingBottom="@dimen/navBar_distance">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/greetingView"
            style="@style/WhiteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/add_post_greeting"
            android:textSize="@dimen/default_font_size"
            app:layout_constraintBottom_toTopOf="@+id/emotionRadioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/emotionRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@+id/greetingView"
            app:layout_constraintStart_toStartOf="@+id/greetingView"
            app:layout_constraintTop_toBottomOf="@+id/greetingView">

            <RadioButton
                android:id="@+id/icon_neutral"
                android:layout_width="65dp"
                android:layout_height="73dp"
                android:layout_weight="0.1"
                android:adjustViewBounds="true"
                android:background="@drawable/icon_neutral_text"
                android:button="@null"
                android:scaleX="0.9"
                android:scaleY="0.9" />

            <RadioButton
                android:id="@+id/icon_happy"
                android:layout_width="65dp"
                android:layout_height="73dp"
                android:layout_weight="0.1"
                android:background="@drawable/icon_happy_text"
                android:button="@null"
                android:scaleX="0.9"
                android:scaleY="0.9" />

            <RadioButton
                android:id="@+id/icon_surprised"
                android:layout_width="65dp"
                android:layout_height="73dp"
                android:layout_weight="0.1"
                android:background="@drawable/icon_surprised_text"
                android:button="@null"
                android:scaleX="0.9"
                android:scaleY="0.9" />

            <RadioButton
                android:id="@+id/icon_angry"
                android:layout_width="65dp"
                android:layout_height="73dp"
                android:layout_weight="0.1"
                android:background="@drawable/icon_angry_text"
                android:button="@null"
                android:scaleX="0.9"
                android:scaleY="0.9" />

            <RadioButton
                android:id="@+id/icon_scared"
                android:layout_width="65dp"
                android:layout_height="73dp"
                android:layout_weight="0.1"
                android:background="@drawable/icon_scared_text"
                android:button="@null"
                android:scaleX="0.9"
                android:scaleY="0.9" />

            <RadioButton
                android:id="@+id/icon_disgusted"
                android:layout_width="65dp"
                android:layout_height="73dp"
                android:layout_weight="0.1"
                android:background="@drawable/icon_disgusted_text"
                android:button="@null"
                android:scaleX="0.9"
                android:scaleY="0.9" />

            <RadioButton
                android:id="@+id/icon_sad"
                android:layout_width="65dp"
                android:layout_height="73dp"
                android:layout_weight="0.1"
                android:background="@drawable/icon_sad_text"
                android:button="@null"
                android:scaleX="0.9"
                android:scaleY="0.9" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:baselineAligned="false" android:orientation="horizontal">


            <RelativeLayout
                android:id="@+id/timeInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                app:layout_constraintBaseline_toBaselineOf="@+id/dateInputLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dateInputLayout">


                <TextView
                    android:id="@+id/timeText"
                    style="@style/InputButtonText"
                    android:layout_width="57dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/input_button_white"
                    android:gravity="center"
                    android:text="@string/add_post_time_button" />

                <EditText
                    android:id="@+id/timeEditText"
                    style="@style/WhiteText"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_alignTop="@+id/timeText"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="false"
                    android:layout_marginStart="57dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_toRightOf="@+id/timeText"
                    android:background="@drawable/input_button_right"
                    android:clickable="true"
                    android:ems="10"
                    android:focusable="false"
                    android:gravity="center"
                    android:inputType="date"
                    android:textSize="15dp" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/dateInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                app:layout_constraintEnd_toStartOf="@+id/timeInputLayout"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="123dp">


                <TextView
                    android:id="@+id/dateText"
                    style="@style/InputButtonText"
                    android:layout_width="57dp"
                    android:layout_height="35dp"
                    android:layout_centerVertical="true"
                    android:background="@drawable/input_button_white"
                    android:gravity="center"
                    android:text="@string/add_post_date_button" />

                <EditText
                    android:id="@+id/dateEditText"
                    style="@style/WhiteText"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_alignTop="@+id/dateText"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentBottom="false"
                    android:layout_marginStart="57dp"
                    android:layout_marginLeft="-1dp"
                    android:layout_marginTop="0dp"
                    android:layout_toRightOf="@+id/dateText"
                    android:background="@drawable/input_button_right"
                    android:clickable="true"
                    android:ems="10"
                    android:focusable="false"
                    android:gravity="center"
                    android:inputType="date"
                    android:textSize="15dp" />

            </RelativeLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <ImageButton
                android:id="@+id/addPictureButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:maxHeight="350dp"
                android:scaleType="fitCenter"
                android:scaleX="1"
                android:src="@drawable/add_picture_button"
                android:tint="@drawable/button_pressed"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <EditText
            android:id="@+id/description_edittext"
            style="@style/WhiteText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:background="@null"
            android:ems="10"
            android:hint="@string/add_post_description_hint"
            android:inputType="textPersonName"
            android:maxLength="@integer/max_char_length"
            android:textColorHint="@color/selected_color"
            android:textSize="16sp" />

        <RelativeLayout
            android:id="@+id/locationInputLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp">


            <TextView
                android:id="@+id/locationText"
                style="@style/InputButtonText"
                android:layout_width="85dp"
                android:layout_height="35dp"
                android:layout_centerVertical="true"
                android:background="@drawable/input_button_white"
                android:gravity="center"
                android:text="@string/add_post_location_button" />

            <EditText
                android:id="@+id/locationEditText"
                style="@style/WhiteText"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="false"
                android:layout_marginStart="83dp"
                android:layout_marginLeft="-2dp"
                android:layout_toRightOf="@+id/locationText"
                android:background="@drawable/button_right_long"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:gravity="center"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="15dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:baselineAligned="false" android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/socialSpinnerLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0">

                <Spinner
                    android:id="@+id/social_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@null"
                    android:baselineAligned="false"
                    android:dropDownVerticalOffset="0dp"
                    android:overlapAnchor="false"
                    android:paddingLeft="0dp"
                    android:popupBackground="@drawable/blur_background"
                    android:spinnerMode="dropdown" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:paddingLeft="0dp"
                    android:paddingRight="0dp"
                    android:scaleType="fitXY"
                    android:scaleY="0.7"
                    android:src="@drawable/spinner_bar" />

            </RelativeLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <Button
                android:id="@+id/done_button"
                style="@style/WhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:text="@string/add_post_done_button"
                android:textAllCaps="false"
                android:textColor="@drawable/button_pressed" />


            <Button
                android:id="@+id/cancel_button"
                style="@style/WhiteText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginEnd="10dp"
                android:background="@android:color/transparent"
                android:text="@string/add_post_cancel_button"
                android:textAllCaps="false"
                android:textColor="@drawable/button_pressed" />

        </RelativeLayout>
    </LinearLayout>

</ScrollView>