...
    <string name="spinner_empty">None</string>

    <string name="event_delete_success">Event Deleted Successfully</string>
    <string name="event_delete_fail">Could not delete event, please try again</string>

    <string-array name="social_conditions">
        <item>Single</item>
        <item>Pair</item>
        <item>Small Group</item>
        <item>Crowd</item>
    </string-array>

    <string name="mood_neutral">Neutral</string>
    <string name="mood_happy">Happy</string>
    <string name="mood_angry">Angry</string>
...
